--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="js/jquery-3.6.0.min.js"></script>
   <style>
     .form, .table
     {
@@ -35,11 +35,12 @@
               <div class="mb-3 mt-3">
                 <label for="gender">Gender:</label>
                 <label for="gender">Male</label>
-                <input type="radio"  id="gender" name="gender" value="male">
+                <input type="radio"  name="gender" id="gender" value="male">
                 <label for="gender">Female</label>
-                <input type="radio"  id="gender" name="gender" value="female">
+                <input type="radio"  name="gender" id="gender" value="female">
                 <label for="gender">Others</label>
-                <input type="radio" id="gender" name="gender" value="others">
+                <input type="radio" name="gender"  id="gender" value="others">
+                <!-- <span  id="gendercheck" style="color: red;" >**Select gender</span> -->
               </div>
               <!--Highest Qualification -->
               <div class="mb-3 mt-3">
@@ -65,16 +66,11 @@
                 <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pswd">
               </div> -->
               
-              <div class="form-check mb-3">
-                <label class="form-check-label">
-                  <input class="form-check-input" type="checkbox" name="remember"> Remember me
-                </label>
-              </div>
               <!-- <input type="submit" class="btn btn-primary" id="submitbtn" value="Submit"> -->
               <button type="submit" class="btn btn-primary" id="submitbtn">Submit</button>
             </form>
         </div>
-        <div class="col-md-6 table">
+        <div class="col-md-6 table" id="table">
           <h2>Details</h2>
           <table class="table table-striped" id="detailstable">
             <thead>
