--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </div> -->
               
               <!-- <input type="submit" class="btn btn-primary" id="submitbtn" value="Submit"> -->
-              <button type="submit" class="btn btn-primary" id="submitbtn">Submit</button>
+              <button type="button" class="btn btn-primary" id="submitbtn" value="submit">Submit</button>
             </form>
         </div>
         <div class="col-md-6 table" id="table">
